Implement the accesskey attribute for LEGEND, make it move focus forward when it's not focusable. b=81481 r=aaronleventhal sr=bzbarsky